2010-08-30  Timothy Baker  <timothypaulbaker@gmail.com> (tiny change)

	* doc/sed.texi (Regular expressions): Fix typo.

2010-08-17  Paolo Bonzini  <bonzini@gnu.org>

	Fix imprecision in the documentation of `D'.
	* doc/sed-in.texi (D command): Fix documentation of behavior for
	pattern space ending with \n and with no other newline.
	Reported by Randall Cotton.
	* doc/sed.x (D command): Fix documentation of behavior for
	pattern space ending with \n and with no other newline.
	* doc/sed.texi: Regenerate.
	* doc/sed.1: Regenerate.

2010-07-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Let --posix turn off nonportable scripts ending in backslash.
	* sed/compile.c (errors, INCOMPLETE_CMD): New error string.
	(compile_program): In strict posix mode, complain about incomplete
	command.
	* NEWS: Update.
	Report by Bruno Haible.

2010-07-16  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf (gnulib_modules): Replace mkstemp with mkostemp.
	* bootstrap.sh.in: Compile mkostemp.c instead of mkstemp.c.
	* gnulib: Update.
	* NEWS: Mention change.
	* sed/utils.c (ck_mkstemp): Use mkostemp to work around Cygwin
	oddity.  Reported by Stepan Kasal.

2009-11-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/sed.texi (Extended Commands): Document F command.
	* doc/sed-in.texi: Regenerate.
	* sed/compile.c (compile_program): Accept 'F' if not --posix.
	* sed/execute.c (open_next_file): Always initialize in_file_name.
	(execute_program): Handle 'F'.
	* configure.ac: Bump SED_FEATURE_VERSION.
	* NEWS: Update.

2009-12-07  Clint Adams  <schizo@debian.org>  (tiny change)

	* sed/execute.c (open_next_file): If is_selinux_enabled returns -1,
	treat it as "disabled".

2009-10-15  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown, open_next_file): Merge 5156c19b correctly.
	* sed/utils.c: Likewise.

2009-10-15  Paolo Bonzini  <bonzini@gnu.org>
	    WANG Yunfeng  <uhuruh@gmail.com>

	* sed/execute.c (str_append, str_append_modified): Handle incomplete