@@ -21,7 +21,7 @@ gnulib_modules="
     acl alloca btowc extensions getline getopt gettext localcharset
     mbrlen mbrtowc memchr mbsinit mkostemp obstack pathmax rename
     selinux-h snprintf stdbool stat-macros strerror strverscmp ssize_t
-    unlocked-io vasnprintf verify wcrtomb wctob"
+    unlocked-io vasnprintf verify version-etc-fsf wcrtomb wctob"
 
 SKIP_PO=t
 checkout_only_file=
