@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SED "1" "August 2010" "sed version 4.2.1" "User Commands"
+.TH SED "1" "August 2010" "sed (super-sed) 3.63" "User Commands"
 .SH NAME
 sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
@@ -52,6 +52,10 @@ disable all GNU extensions.
 .IP
 use extended regular expressions in the script.
 .HP
+\fB\-R\fR, \fB\-\-regexp\-perl\fR
+.IP
+use Perl 5's regular expressions syntax in the script.
+.HP
 \fB\-s\fR, \fB\-\-separate\fR
 .IP
 consider files as separate rather than as a single continuous
@@ -73,10 +77,8 @@ non-option argument is taken as the sed script to interpret.  All
 remaining arguments are names of input files; if no input files are
 specified, then the standard input is read.
 .PP
-GNU sed home page: <http://www.gnu.org/software/sed/>.
-General help using GNU software: <http://www.gnu.org/gethelp/>.
-E-mail bug reports to: <bug-gnu-utils@gnu.org>.
-Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
+E-mail bug reports to: <bonzini@gnu.org>.
+Be sure to include the word ``ssed'' somewhere in the ``Subject:'' field.
 .SH "COMMAND SYNOPSIS"
 This is just a brief synopsis of \*(sd commands to serve as
 a reminder to those who already know \*(sd;
@@ -367,17 +369,17 @@ E-mail bug reports to
 Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
 Also, please include the output of ``sed --version'' in the body
 of your report if at all possible.
+.SH AUTHOR
+Written by Jay Fenlason, Tom Lord, Ken Pizzini,
+and Paolo Bonzini.
+E-mail bug reports to: <bonzini@gnu.org>.
+Be sure to include the word ``ssed'' somewhere in the ``Subject:'' field.
 .SH COPYRIGHT
-Copyright \(co 2009 Free Software Foundation, Inc.
+Copyright \(co 2010 Free Software Foundation, Inc.
+License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
 .br
-This is free software; see the source for copying conditions.  There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
-to the extent permitted by law.
-.PP
-GNU sed home page: <http://www.gnu.org/software/sed/>.
-General help using GNU software: <http://www.gnu.org/gethelp/>.
-E-mail bug reports to: <bug-gnu-utils@gnu.org>.
-Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
 .SH "SEE ALSO"
 .BR awk (1),
 .BR ed (1),
