@@ -10,6 +10,9 @@ basename.c
 btowc.c
 c-ctype.c
 c-ctype.h
+c-strcase.h
+c-strcasecmp.c
+c-strncasecmp.c
 canonicalize-lgpl.c
 config.charset
 copy-acl.c
@@ -38,6 +41,19 @@ getpagesize.c
 gettext.h
 gettimeofday.c
 gnulib.mk
+iconv.h
+iconv.in.h
+iconv_open-aix.gperf
+iconv_open-aix.h
+iconv_open-hpux.gperf
+iconv_open-hpux.h
+iconv_open-irix.gperf
+iconv_open-irix.h
+iconv_open-osf.gperf
+iconv_open-osf.h
+iconv_open-solaris.gperf
+iconv_open-solaris.h
+iconv_open.c
 intprops.h
 langinfo.h
 langinfo.in.h
@@ -48,10 +64,17 @@ malloc.c
 malloca.c
 malloca.h
 malloca.valgrind
+mbchar.c
+mbchar.h
+mbiter.h
 mbrlen.c
 mbrtowc.c
 mbsinit.c
+mbslen.c
+mbsstr.c
+mbuiter.h
 memchr.c
+memchr.valgrind
 memcmp.c
 memmove.c
 mkostemp.c
@@ -63,6 +86,8 @@ printf-args.c
 printf-args.h
 printf-parse.c
 printf-parse.h
+propername.c
+propername.h
 quote.c
 quote.h
 quotearg.c
@@ -91,6 +116,8 @@ size_max.h
 snprintf.c
 stat-macros.h
 stat.c
+stdarg.h
+stdarg.in.h
 stdbool.h
 stdbool.in.h
 stddef.h
@@ -102,13 +129,18 @@ stdio.h
 stdio.in.h
 stdlib.h
 stdlib.in.h
+str-kmp.h
 streq.h
 strerror.c
+striconv.c
+striconv.h
 string.h
 string.in.h
 stripslash.c
 strndup.c
 strnlen.c
+strnlen1.c
+strnlen1.h
 strverscmp.c
 sys
 sys_stat.h
@@ -119,21 +151,33 @@ tempname.c
 tempname.h
 time.h
 time.in.h
+trim.c
+trim.h
 unistd.h
 unistd.in.h
+unitypes.h
+unitypes.in.h
+uniwidth.h
+uniwidth.in.h
 unlocked-io.h
 vasnprintf.c
 vasnprintf.h
 verify.h
+version-etc-fsf.c
+version-etc.c
+version-etc.h
 wchar.h
 wchar.in.h
 wcrtomb.c
 wctob.c
 wctype.h
 wctype.in.h
+wcwidth.c
 xalloc-die.c
 xalloc.h
 xmalloc.c
 xsize.h
+xstriconv.c
+xstriconv.h
 xstrndup.c
 xstrndup.h
